HNP: lattice calculation method

--- a/TP3/HiddenNumberProblem.ipynb
+++ b/TP3/HiddenNumberProblem.ipynb
@@ -16,17 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2, 6], [4, 6]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -51,7 +43,7 @@
     "    ''' Generate an identity matrix of the given order\n",
     "    '''\n",
     "    i_m = [[0]*order for i in range(0, order)]\n",
-    "    for i range(0, order):\n",
+    "    for i in range(0, order):\n",
     "        i_m[i][i] = 1\n",
     "    return i_m\n",
     "\n",
@@ -61,32 +53,35 @@
     "        self.k = k\n",
     "        self.l = l\n",
     "        self.v_x = [random.randint(0, self.p) for i in range(0,self.l)]\n",
-    "        self.lambda = 2 ** (k+1)\n",
+    "        self.lambd = 2 ** (k+1)\n",
     "        self.gen_lattice()\n",
+    "        self.target = None\n",
     "\n",
     "    def gen_lattice(self):\n",
-    "        pI = scalar_matrix_prod(self.p, identity_matrix(self.l))\n",
-    "        pIl = scalar_matrix_prod(self.l, self.pI)\n",
-    "        upper_lattice = [line.append(0) for line in pIl]\n",
-    "        self.lattice = upper_lattice.append(self.x.append(self.lambda**-1))\n",
+    "        self.lattice = scalar_matrix_prod(self.p*self.lambd, identity_matrix(self.l))\n",
+    "        self.lattice = scalar_matrix_prod(self.l, self.lattice)\n",
+    "\n",
+    "        for line in self.lattice:\n",
+    "            line.append(0)\n",
+    "            \n",
+    "        lambd_v_x = [self.lambd * x_i for x_i in self.v_x]\n",
+    "        self.lattice.append(self.v_x + [1])\n",
     "        \n",
-    "    def define_target(self, t):\n",
+    "    def define_target(self, target):\n",
+    "        self.target = [self.lambd * t_i for t_i in target]\n",
+    "    \n",
+    "    def run_algorithm(self):\n",
     "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "bv = BV(10,2,3)"
+   ]
   }
  ],
  "metadata": {
