Several fixes on HNP

--- a/TP3/HiddenNumberProblem.ipynb
+++ b/TP3/HiddenNumberProblem.ipynb
@@ -16,71 +16,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "def matrix_prod(A,B):\n",
-    "    ''' Calculate the dot product between two square matrices A and B\n",
-    "    '''\n",
-    "    C = [[0]*len(A) for i in range(0,len(A))]\n",
-    "    for i in range(0,len(A)):\n",
-    "        C[i] = [0]*len(A)\n",
-    "        for j in range(0,len(A)):\n",
-    "            for w in range(0,len(A)):\n",
-    "                C[i][j] += A[i][w] * B[w][j]\n",
-    "    return C\n",
-    "\n",
-    "def scalar_matrix_prod(a,M):\n",
-    "    ''' Calculate the matrix a * M\n",
-    "    '''\n",
-    "    C = [[a*x for x in line] for line in M]\n",
-    "    return C\n",
-    "\n",
-    "def identity_matrix(order):\n",
-    "    ''' Generate an identity matrix of the given order\n",
-    "    '''\n",
-    "    i_m = [[0]*order for i in range(0, order)]\n",
-    "    for i in range(0, order):\n",
-    "        i_m[i][i] = 1\n",
-    "    return i_m\n",
-    "\n",
     "class BV:\n",
-    "    def __init__(self, p, k, l):\n",
+    "    def __init__(self, p, k, l, s):\n",
     "        self.p = p\n",
     "        self.k = k\n",
     "        self.l = l\n",
-    "        self.v_x = [random.randint(0, self.p) for i in range(0,self.l)]\n",
     "        self.lambd = 2 ** (k+1)\n",
+    "        self.s = s\n",
+    "        self.x = [random.randint(0, self.p-1) for i in range(0,self.l)]\n",
+    "        self.t = [self.lambd*self.msb(self.s*x_i) for x_i in self.x]\n",
+    "        self.t.append(0)\n",
     "        self.gen_lattice()\n",
-    "        self.target = None\n",
     "\n",
     "    def gen_lattice(self):\n",
-    "        self.lattice = scalar_matrix_prod(self.p*self.lambd, identity_matrix(self.l))\n",
-    "        self.lattice = scalar_matrix_prod(self.l, self.lattice)\n",
-    "\n",
+    "        ''' Calculate the lattice base\n",
+    "        '''\n",
+    "        self.lattice = []\n",
+    "        \n",
+    "        for i in range(0,self.l):\n",
+    "            self.lattice.append([])\n",
+    "            for j in range(0, self.l):\n",
+    "                if i == j:\n",
+    "                    self.lattice[i].append(self.lambd * self.p)\n",
+    "                else:\n",
+    "                    self.lattice[i].append(0)\n",
+    "            \n",
     "        for line in self.lattice:\n",
     "            line.append(0)\n",
     "            \n",
-    "        lambd_v_x = [self.lambd * x_i for x_i in self.v_x]\n",
-    "        self.lattice.append(self.v_x + [1])\n",
-    "        \n",
-    "    def define_target(self, target):\n",
-    "        self.target = [self.lambd * t_i for t_i in target]\n",
+    "        lambd_v_x = [self.lambd * x_i for x_i in self.x]\n",
+    "        self.lattice.append(lambd_v_x + [1])\n",
+    "    \n",
+    "    def msb(self, x):\n",
+    "        ''' Return an approximation of the k most significative bits of x\n",
+    "        '''\n",
+    "        valid_u = False\n",
+    "        while (not valid_u):\n",
+    "            u = random.randint(0, self.p - 1)\n",
+    "            x_u = x - u\n",
+    "            norm_int = min(x_u, self.p - x_u)\n",
+    "            valid_u = (norm_int <= self.p/self.lambd)\n",
+    "        return u\n",
     "    \n",
     "    def run_algorithm(self):\n",
-    "        pass"
+    "        ''' Use B&V to calculate the secret\n",
+    "        '''\n",
+    "        w = [-(self.s*x_i//self.p) for x_i in self.x]\n",
+    "        w.append(self.s)\n",
+    "        alfa = [0] * (self.l + 1)\n",
+    "        for i in range(0, self.l+1):\n",
+    "            for j in range(0, self.l+1):\n",
+    "                alfa[i] += w[j]*self.lattice[j][i]\n",
+    "        return alfa[self.l]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 187,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bv = BV(10,2,3)"
+    "bv = BV(13,2,3,4)\n",
+    "bv.run_algorithm()"
    ]
   }
  ],
