--- a/TP3/HiddenNumberProblem.ipynb
+++ b/TP3/HiddenNumberProblem.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 662,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +26,19 @@
     "from sage.modules.free_module_integer import IntegerLattice\n",
     "\n",
     "class BV:\n",
-    "    def __init__(self, p, k, l, s=4):\n",
-    "        self.p = p\n",
-    "        self.l = l\n",
-    "        self.lambd = 2 ** (k+1)\n",
-    "        self.x = [rand.randint(0, self.p-1) for i in range(0, self.l)]\n",
-    "        self.define_target(s)\n",
-    "        self.gen_lattice()\n",
+    "    def __init__(self, p, n, k, s):\n",
+    "        self.p = ZZ(p)\n",
+    "        self.n = n\n",
+    "        if k>= sqrt(len(self.p.bits())):\n",
+    "            self.lambd = 2 ** (k+1)\n",
+    "            self.x = [ZZ.random_element(self.p) for i in range(0, self.n)]\n",
+    "            self.define_target(s)\n",
+    "            self.gen_lattice()\n",
     "\n",
     "    def gen_lattice(self):\n",
     "        ''' Calculate the lattice base\n",
     "        '''\n",
-    "        b_1 = self.lambd * self.p * identity_matrix(ZZ, self.l)\n",
+    "        b_1 = self.lambd * self.p * identity_matrix(ZZ, self.n)\n",
     "        b_2 = self.lambd * matrix(self.x)\n",
     "        self.G = block_matrix([[b_1, 0],[b_2, 1]])\n",
     "        self.lat = IntegerLattice(self.G)\n",
@@ -48,62 +49,73 @@
     "        '''\n",
     "        valid_u = False\n",
     "        while (not valid_u):\n",
-    "            u = rand.randint(0, self.p - 1)\n",
-    "            x_u = x - u\n",
-    "            norm_int = min(x_u, self.p - x_u)\n",
-    "            valid_u = (norm_int <= self.p//self.lambd)\n",
+    "            u = ZZ.random_element(self.p)\n",
+    "            xu = (x - u) % self.p\n",
+    "            norm_xu = min(xu, self.p - xu)\n",
+    "            valid_u = (norm_xu <= self.p//self.lambd)\n",
     "        return u\n",
     "\n",
     "    def define_target(self, s):\n",
-    "        self.targ = [self.lambd * s * x_i for x_i in self.x]\n",
+    "        u = [self.msb(s * x_i) for x_i in self.x]\n",
+    "        self.targ = [self.lambd * u_i for u_i in u]\n",
     "        self.targ.append(0)\n",
     "        \n",
     "    def solve_exact(self):\n",
     "        cv_exact = self.lat.closest_vector(tuple(self.targ))\n",
-    "        return (-cv_exact)*self.G\n",
+    "        return cv_exact\n",
     "        \n",
-    "\n",
     "    def solve_approx(self):\n",
     "        l_b = matrix(self.lat.reduced_basis)\n",
-    "        t_b = matrix(1, self.l+1, [-t_i for t_i in self.targ])\n",
-    "        z_b = matrix(self.l+1, 1, [0]*(self.l+1))\n",
-    "        M_b = matrix(1, 1, [self.p ** 2])\n",
+    "        t_b = matrix(1, self.n+1, [-t_i for t_i in self.targ])\n",
+    "        z_b = matrix(self.n+1, 1, [0]*(self.n+1))\n",
+    "        M_b = matrix(1, 1, [self.lambd * self.p ** 2])\n",
     "        l1 = block_matrix(2, 2, [ [l_b, z_b], [t_b, M_b]])\n",
     "        l1_reduced = IntegerLattice(l1).reduced_basis\n",
-    "        delta = np.array(l1_reduced[self.l+1][:-1])\n",
-    "        y1 = -1 * matrix(list(self.targ + delta))\n",
-    "        return y1*self.G\n",
-    "        "
+    "        delta = np.array(l1_reduced[self.n+1][:-1])\n",
+    "        y1 = matrix(list(self.targ + delta))\n",
+    "        return y1    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 683,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0, 0)\n",
-      "[    0 -3136     0]\n"
+      "x: [6, 6]\n",
+      "target: [48, 48, 0]\n",
+      "\n",
+      "L: \n",
+      "[112   0|  0]\n",
+      "[  0 112|  0]\n",
+      "[-------+---]\n",
+      "[ 96  96|  1]\n",
+      "\n",
+      "Exact CVP: (48, 48, -3)\n",
+      "Approx CVP: [48 48 -3]\n"
      ]
     }
    ],
    "source": [
-    "bv = BV(7, 2, 2)\n",
+    "p = 7\n",
+    "n = 2\n",
+    "k = 3\n",
+    "s = 4\n",
+    "bv = BV(p, n, k, s)\n",
     "exact = bv.solve_exact()\n",
     "approx = bv.solve_approx()\n",
-    "print(exact)\n",
-    "print(approx)"
+    "print(\"x: \" + str(bv.x))\n",
+    "print(\"target: \" + str(bv.targ))\n",
+    "print(\"\")\n",
+    "print(\"L: \")\n",
+    "print(bv.G)\n",
+    "print(\"\")\n",
+    "print(\"Exact CVP: \" + str(exact))\n",
+    "print(\"Approx CVP: \" + str(approx))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
