--- a/TP3/HiddenNumberProblem.ipynb
+++ b/TP3/HiddenNumberProblem.ipynb
@@ -11,7 +11,38 @@
     "    $\\mid\\mid X\\mid\\mid_p=$min$(x, p-x)$\n",
     "1. A segunda função devolve os **$k$ bits mais significativos do seu argumento**, um número natural, módulo $p$: $msb_{k,p}(x)$\n",
     "\n",
-    "## Boneh & Venkatesan Algorithm"
+    "\n",
+    "O HNP pretende determinar um segredo  $\\,s\\,$ a partir dos seguintes dados \n",
+    "\n",
+    "- Parâmetros $p,k$ e um $\\ell$ suficientemente grande.\n",
+    "- Um vector  $\\bar{x}\\equiv (x_0,x_1,\\cdots,x_{\\ell-1})$  de $\\ell$ inteiros positivos gerados aleatoriamente no intervalo {0⋯p−1}.\n",
+    "- Um vector $\\bar{u}\\equiv (u_0,u_1,\\cdots,u_{\\ell-1})$  de $\\ell$ inteiros positivos que verificarem as igualdades $\\,u_i = \\text{msb}_{k,p}(s\\times x_i)$\n",
+    "\n",
+    "## Abordagem Boneh & Venkatesan (B&V)\n",
+    "Sejam:\n",
+    "- $\\lambda \\equiv 2^{k+1}$\n",
+    "- $L$ a matrix de racionais de dimensão $(l+1)*(l+1)$ definida por:\n",
+    "\n",
+    "$${L}\\;\\equiv\\; \\left\\lbrack \\begin{array}{c|c} p\\,\\mathbf{I}_\\ell & 0 \\\\\\mathbf{x} & \\lambda^{-1} \\end{array} \\right\\rbrack$$ \n",
+    "\n",
+    "- o target $t \\equiv [u|0]$\n",
+    "\n",
+    "A abordagem B&V determina o segredo $s$ resolvendo o CVP do no reticulado $$\\mathcal{L} \\,\\equiv\\,\\Lambda(L)\\,$$ com o *target* $\\mathbf{t}$.\n",
+    "\n",
+    "\n",
+    "#### Notas de implementação\n",
+    "O algoritmo aproximado CVP requer reticulados sobre inteiros. Porém o reticulado  $\\mathcal{L}$ está definido sobre racionais devido à componente  $\\lambda^{-1}$ na base do reticulado.\n",
+    "Para resolver esta questão vamos escalar tanto a base $L$ como o target  $\\mathbf{t}$ multiplicando ambos pelo inteiro λ. Desta forma, a base e o target passam a ser\n",
+    "\n",
+    "${L}\\;\\equiv\\; \\left\\lbrack \\begin{array}{c|c} \\lambda\\,p\\,\\mathbf{I}_\\ell & 0 \\\\\\lambda\\,\\mathbf{x} & 1 \\end{array}\\right\\rbrack$  e $\\;\\mathbf{t}\\,\\equiv\\,\\lbrack\\,\\lambda\\mathbf{u} \\,|\\, 0\\,\\rbrack$\n",
+    "\n",
+    "Usando o mesmo $\\mathbf{w}$ que na versão original do algoritmo B&V tem-se\n",
+    "$\\,\\mathbf{w}\\,\\equiv\\,\\lbrack\\,-\\mathbf{y}\\,|\\,s\\,\\rbrack\\,$ com $\\,y_i = (s\\,x_i) \\mathbin{\\text{quo}} p$.\n",
+    "\n",
+    "Como $\\,\\mathbf{w}\\times L - \\mathbf{t} \\;=\\; \\lbrack\\,\\lambda\\times(-p\\,\\mathbf{y}+s\\,\\mathbf{x}) - \\lambda\\times\\mathbf{u}\\,|\\,s\\,\\rbrack$ , repetindo a análise anterior temos \n",
+    "$\\,\\|\\,\\mathbf{w}\\times L - \\mathbf{t}\\,\\|\\;\\leq\\; p$.\n",
+    "\n",
+    "Nesta configuração, sendo $\\,\\alpha\\,\\equiv\\,\\mathbf{w}\\times L\\,$ o vector mais próximo do target  $\\mathbf{t}$, a sua última componente $\\,\\alpha_\\ell\\,$ produz directamente o número escondido $\\,s$."
    ]
   },
   {
@@ -45,8 +76,6 @@
     "        self.lat_reduced = np.array(self.lat.reduced_basis)\n",
     "    \n",
     "    def msb(self, x):\n",
-    "        ''' Return an approximation of the k most significative bits of x\n",
-    "        '''\n",
     "        valid_u = False\n",
     "        while (not valid_u):\n",
     "            u = ZZ.random_element(self.p)\n",
