--- a/TP3/NTRU_Encrypt.ipynb
+++ b/TP3/NTRU_Encrypt.ipynb
@@ -2,19 +2,107 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# NTRU Encrypt"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Num sistema criptográfico NTRU, **f** (e **g**, se necessário) são as chaves privadas, enquanto h\n",
+    "é a chave pública. Essas chaves podem ser geradas através do seguinte algoritmo:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Algoritmo de Geração de chaves\n",
+    "\n",
+    "INPUT: Um conjunto de parâmetros $Param = \\{N, p, q, d\\}$ e uma $seed$.\n",
+    "\n",
+    "1. Instanciar $Sampler$ com $T(d + 1, d)$ e com a $seed$;\n",
+    "2. $f ← Sampler$\n",
+    "3. se $f$ não é invertível $mod q$ então retornar ao passo 2\n",
+    "4. $g ← Sampler$\n",
+    "5. $h = g/(pf + 1) mod q$\n",
+    "\n",
+    "OUTPUT: Chave pública $h$ e chave secreta $(pf, g)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Algoritmo de Cifragem\n",
+    "\n",
+    "INPUT: Chave pública h, mensagem msg de comprimento mlen, um conjunto de parâmetros $Param$ e a $seed$.\n",
+    "1. $m = Pad(msg, seed)$\n",
+    "2. $rseed = Hash(m|h)$\n",
+    "3. Instanciar $Sampler$ com $T$ e com $rseed$;\n",
+    "4. $r ← Sampler$\n",
+    "5. $t = r ∗ h$\n",
+    "6. $tseed = Hash(t)$\n",
+    "7. Instanciar $Sampler$ com $T$ e com $tseed$;\n",
+    "8. $m_{mask} ← Sampler$\n",
+    "9. $m' = m − m_{mask}(mod p)$\n",
+    "10. $c = t + m$\n",
+    "\n",
+    "OUTPUT: Criptograma **c**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O algoritmo acima usa um **método de *padding*** para lidar com\n",
+    "entropia insuficiente potencial de uma mensagem. Supondo que o tamanho da mensagem é válido e menor que $(N - 173)$ *bits*, o algoritmo *padding* funciona da seguinte maneira:\n",
+    "\n",
+    "1. Converter $msg$ numa *string* de *bits*. Cada *bit* forma um coeficiente binário para a parte inferior do polinómio $m$, partindo do coeficiente 0.\n",
+    "\n",
+    "2. Os últimos $167$ coeficientes de $m (x)$ são escolhidos aleatoriamente de $\\{−1, 0, 1\\}$ (com um *input* *seed* ). O que dá mais de $256$ bits de entropia.\n",
+    "\n",
+    "3. O comprimento da msg é convertido numa *string* binária de 8 *bits* e forma os últimos $173$ a $168$ coeficientes de $m (x)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Algorithm de Decifragem\n",
+    "\n",
+    "INPUT: Chave secreta $f$, chave pública $h$, criptograma $c$, e o conjunto de parâmetros $Param$.\n",
+    "1. $m' = f ∗ c (mod p)$\n",
+    "2. $t = c − m$\n",
+    "3. $tseed = Hash(t)$\n",
+    "4. Instanciar $Sampler$ com $T$ e com $tseed$;\n",
+    "5. $m_{mask} = Sampler$\n",
+    "6. $m = m' + m_{mask} (mod p)$\n",
+    "7. $rseed = Hash(m|h)$\n",
+    "8. Instanciar $Sampler$ com $T$ e com $rseed$;\n",
+    "9. $r ← Sampler$\n",
+    "10. $msg, mlen = Extract(m)$\n",
+    "11. se $p · r ∗ h = t$ então\n",
+    "12. $result = msg, mlen$\n",
+    "13. caso contrário\n",
+    "14. $result = ⊥ $\n",
+    "\n",
+    "OUTPUT: $result$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No algoritmo acima a operação $Extrair ()$ corresponde ao inverso de $Pad ()$. Emite uma mensagem $m$ e seu comprimento $mlen$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -37,9 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -48,8 +134,7 @@
       ]
      },
      "execution_count": 13,
-     "metadata": {
-     },
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -61,11 +146,8 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def vec():\n",
     "    return  [choice([-1,0,1]) for k in range(N)]\n",
@@ -83,19 +165,39 @@
     "    rr = lambda x: x if x <= pp else x - p\n",
     "    return [rr(n%p) if n>=0 else -rr((-n)%p) for n in l]\n",
     "\n",
-    "# comparação módulo 'p'\n",
-    "#def equalp(x,y,p):\n",
-    "#    return  all([(a-b)%p == 0  for (a,b) in zip(x,y)] )"
+    "def msg2bits(msg):\n",
+    "    '''\n",
+    "        Function that converts a message into a string of bits\n",
+    "    '''\n",
+    "    return bin(reduce(lambda x, y : (x<<8)+y, (ord(c) for c in msg), 1))[3:]\n",
+    "\n",
+    "def padding(msg,seed):\n",
+    "    '''\n",
+    "        Padding method\n",
+    "    '''\n",
+    "    mlen = length(msg)\n",
+    "    if mlen < (N-173):\n",
+    "        msg = msg2bits(msg)\n",
+    "        m = []\n",
+    "        for i in range (0,mlen):\n",
+    "            \n",
+    "            #TODO\n",
+    "            choice([-1,0,1]) \n",
+    "            \n",
+    "\n",
+    "\n",
+    "def extract(msg):\n",
+    "    '''\n",
+    "        Inverse of the padding function\n",
+    "    '''\n",
+    "    #TODO"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import hashlib\n",
     "\n",
@@ -112,11 +214,9 @@
     "        self.chvpub = h\n",
     "\n",
     "    def encrypt(self,msg,param,seed):\n",
-    "        #mlen = length(m)\n",
-    "        #param == N or p or q or d\n",
-    "        m = msg + seed\n",
+    "        m = padding(msh,seed)\n",
     "\n",
-    "        sha256 = hashlib.sha256() #20\n",
+    "        sha256 = hashlib.sha256()\n",
     "        sha256.update(m + self.chvpub)\n",
     "        rseed = int(sha256.hexdigest(), 16)\n",
     "\n",
@@ -126,7 +226,7 @@
     "        tseed = int(sha256.hexdigest(), 16)\n",
     "\n",
     "        m_mask = Q(vec())\n",
-    "        m_2 = m - m_mask #30\n",
+    "        m_2 = m - m_mask\n",
     "\n",
     "        crip = t + m_2\n",
     "        return crip\n",
@@ -136,7 +236,7 @@
     "        m_2 = Q(f * crip)\n",
     "        t = crip - m\n",
     "        sha256 = hashlib.sha256()\n",
-    "        sha256.update(h) #40\n",
+    "        sha256.update(h)\n",
     "        tseed = int(sha256.hexdigest(), 16)\n",
     "\n",
     "        m_mask = Q(vec())\n",
@@ -146,7 +246,7 @@
     "        rseed = int(sha256.hexdigest(), 16)\n",
     "\n",
     "        r = Q(vec())\n",
-    "        msg,mlen = m #50\n",
+    "        msg,mlen = m\n",
     "\n",
     "        if p*r*self.chpub == t:\n",
     "            result = msg,mlen\n",
@@ -158,9 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
@@ -178,6 +276,7 @@
    "source": [
     "# Uma instância NTRU\n",
     "K = NTRU(N,p,q,d,seed = vec())\n",
+    "\n",
     "# Uma mensagem aleatória\n",
     "m = vec()\n",
     "# Cifrar\n",
@@ -189,13 +288,9 @@
   {
    "cell_type": "code",
    "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
-   "source": [
-   ]
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -225,5 +320,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
