--- a/TP3/AtaqueRSA.ipynb
+++ b/TP3/AtaqueRSA.ipynb
@@ -15,11 +15,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def rprime(l):\n",
+    "    return random_prime(2**l-1,True,2**(l-1))\n",
+    "\n",
     "class RSA:\n",
     "    def __init__(self, l):\n",
-    "        self.l = l\n",
-    "        self.r = random_prime(2^(floor(l/2)))\n",
-    "        self.p = next_prime(2*self.r+1)\n",
+    "        self.l = int(l)\n",
+    "\n",
+    "    def keygen(self):\n",
+    "        self.r = rprime(int(self.l/2)+1)\n",
+    "        self.p = rprime(int(self.l/2))\n",
+    "        while self.r<=2*self.p:\n",
+    "            self.r = rprime(int(self.l/2)+1)\n",
+    "            self.p = rprime(int(self.l/2)\n",
     "        q = self.p*self.r\n",
     "        m = (self.p-1)*(self.r-1)\n",
     "        k = randint(2,m)\n",
