Optimized RSA parameter generation

--- a/TP3/NTRU_Encrypt.ipynb
+++ b/TP3/NTRU_Encrypt.ipynb
@@ -295,15 +295,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath (stable)",
-   "language": "sagemath",
-   "metadata": {
-    "cocalc": {
-     "description": "Open-source mathematical software system",
-     "priority": 10,
-     "url": "https://www.sagemath.org/"
-    }
-   },
+   "display_name": "SageMath 8.7",
+   "language": "",
    "name": "sagemath"
   },
   "language_info": {
