--- a/TP3/RSA_Attack.ipynb
+++ b/TP3/RSA_Attack.ipynb
@@ -15,19 +15,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rprime(l):\n",
-    "    return random_prime(2**l-1,True,2**(l-1))\n",
-    "\n",
     "class RSA:\n",
     "    def __init__(self, l):\n",
     "        self.l = int(l)\n",
+    "        self.keygen()\n",
     "\n",
     "    def keygen(self):\n",
-    "        self.r = rprime(int(self.l/2)+1)\n",
-    "        self.p = rprime(int(self.l/2))\n",
-    "        while self.r<=2*self.p:\n",
-    "            self.r = rprime(int(self.l/2)+1)\n",
-    "            self.p = rprime(int(self.l/2)\n",
+    "        r = random_prime(2^(floor(l/2)))\n",
+    "        p = random_prime(2*r+1)\n",
     "        q = self.p*self.r\n",
     "        m = (self.p-1)*(self.r-1)\n",
     "        k = randint(2,m)\n",
@@ -189,6 +184,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?random_prime"
+   ]
   },
   {
    "cell_type": "code",
