--- a/TP3/NTRU_Encrypt.ipynb
+++ b/TP3/NTRU_Encrypt.ipynb
@@ -75,59 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Sampler:\n",
-    "    def __init__(self, N, q, d, seed):\n",
-    "        #TODO: use seed\n",
-    "        Z.<x>  = ZZ[]\n",
-    "        Q.<x>  = PolynomialRing(GF(q),name='x').quotient(x^N-1)\n",
-    "        self.Q = Q\n",
-    "    \n",
-    "    def gen_value(self, n):\n",
-    "        return self.Q(gen_bstring(n))\n",
-    "\n",
-    "\n",
-    "def gen_bstring(n):\n",
-    "    '''Generate a random bit string\n",
-    "    '''\n",
-    "    return  [choice([-1,0,1]) for k in range(n)]\n",
-    "\n",
-    "def rnd_modq(f, q):\n",
-    "    '''Round f mod q\n",
-    "    '''\n",
-    "    qq = (q-1)//2 ; ll = map(lift,f.list())\n",
-    "    return [n if n <= qq else n - q  for n in ll]\n",
-    "\n",
-    "def rnd_modp(l, p):\n",
-    "    '''Round l mod p\n",
-    "    '''\n",
-    "    pp = (p-1)//2\n",
-    "    rr = lambda x: x if x <= pp else x - p\n",
-    "    return [rr(n%p) if n>=0 else -rr((-n)%p) for n in l]\n",
-    "\n",
-    "def pad_msg(msg,seed):\n",
-    "    ''' Padding method\n",
-    "    '''\n",
-    "    mlen = len(msg)\n",
-    "    if mlen < (N-173):\n",
-    "        pass\n",
-    "            \n",
-    "def extract_msg(msg):\n",
-    "    ''' Inverse of the padding function\n",
-    "    '''\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from hashlib import sha256\n",
+    "from hashlib import sha512\n",
     "\n",
     "class NTRU(object):\n",
     "    def __init__(self, d):\n",
@@ -135,96 +87,144 @@
     "        self.N = next_prime(1 << self.d)\n",
     "        self.p = 3\n",
     "        self.q = next_prime(self.p*self.N)\n",
+    "        Z.<x>  = ZZ[]\n",
+    "        Q.<x>  = PolynomialRing(GF(self.q),name='x').quotient(x^self.N-1)\n",
+    "        self.Q = Q\n",
     "        self.keygen()\n",
     "        \n",
     "    def keygen(self):\n",
-    "        smpl = Sampler(self.N, self.q, self.d, gen_bstring(self.N))\n",
-    "        F = smpl.gen_value(self.N)\n",
+    "        smpl = Sampler(self.N, self.d, self.d+1, None)\n",
+    "        seq = smpl.gen_trinary_string()\n",
+    "        F = self.Q(smpl.gen_trinary_string())\n",
+    "        \n",
     "        f = 1 + self.p*F\n",
     "        while not f.is_unit():\n",
-    "            F = Q(gen_bstring())\n",
+    "            F = self.Q(smpl.gen_trinary_string())\n",
     "            f = 1 + self.p*F\n",
-    "        \n",
-    "        G = smpl.gen_value(self.N)\n",
+    "        G = self.Q(smpl.gen_trinary_string())\n",
     "        g = self.p*G\n",
-    "        h = rnd_modq(f^(-1) * g, self.q)\n",
+    "        h = self.rnd_modq(f^(-1) * g)\n",
     "        self.chvpriv = (f,g)\n",
     "        self.chvpub = h\n",
     "        \n",
-    "    def encrypt(self, msg, seed):\n",
-    "        padded_msg = pad_msg(msg, seed)\n",
-    "        rseed = int(sha256(padded_msg + self.chvpub).hexdigest(), 16)\n",
-    "        smpl = Sampler(self.N, self.q, self.d, rseed)\n",
-    "        r = smpl.gen_value(self.N)\n",
-    "        t = r*self.chvpub\n",
-    "        tseed = int(sha256(t).hexdigest(), 16)\n",
-    "        smpl = Sampler(self.N, self.q, self.d, tseed)\n",
-    "        msg_mask = smpl.gen_value(self.N)\n",
-    "        masked_msg = padded_msg - msg_mask\n",
-    "        crypt = t + masked_msg\n",
+    "    def encrypt(self, msg):\n",
+    "        padded_msg = self.pad_msg(msg, 2)\n",
+    "        m_h = bytes(padded_msg + self.chvpub)\n",
+    "        rseed = int(sha512(m_h).hexdigest(), 16)\n",
+    "        smpl = Sampler(self.N, 0, 0, rseed)\n",
+    "        r = self.Q(smpl.gen_trinary_string())\n",
+    "        t = r*self.Q(self.chvpub)\n",
+    "        tseed = int(sha512(bytes(t)).hexdigest(), 16)\n",
+    "        smpl = Sampler(self.N, 0, 0, tseed)\n",
+    "        msg_mask = self.Q(smpl.gen_trinary_string())\n",
+    "        masked_msg = self.rnd_modp(self.rnd_modq(self.Q(padded_msg) - msg_mask))\n",
+    "        crypt = t + self.Q(masked_msg)\n",
     "        return crypt\n",
     "\n",
     "    def decrypt(self, crypt):\n",
-    "        masked_msg = mod(self.chvpriv[0] * crypt, self.p)\n",
-    "        t = crypt - masked_msg\n",
-    "        tseed = int(sha256(self.chvpub).hexdigest(), 16)\n",
-    "        smpl = Sampler(self.N, self.q, self.d, tseed)\n",
-    "        msg_mask = smpl.gen_value(self.N)\n",
-    "        padded_msg = masked_msg + msg_mask\n",
-    "        rseed = int(sha256(padded_msg + self.chvpub).hexdigest(), 16)\n",
-    "        smpl = Sampler(self.N, self.q, self.d, rseed)\n",
-    "        r = smpl.gen_value(self.N)\n",
-    "        msg, mlen = extract_msg(padded_msg)\n",
-    "        if self.p*r*self.chpub == t:\n",
-    "            result = msg,mlen\n",
+    "        masked_msg = self.rnd_modp(self.rnd_modq(self.chvpriv[0] * crypt))\n",
+    "        t = crypt - self.Q(masked_msg)\n",
+    "        tseed = int(sha512(bytes(t)).hexdigest(), 16)\n",
+    "        smpl = Sampler(self.N, 0, 0, tseed)\n",
+    "        msg_mask = self.Q(smpl.gen_trinary_string())\n",
+    "        padded_msg = self.rnd_modp(self.rnd_modq(self.Q(masked_msg) + msg_mask))\n",
+    "        m_h = bytes(padded_msg + self.chvpub)\n",
+    "        rseed = int(sha512(m_h).hexdigest(), 16)\n",
+    "        smpl = Sampler(self.N, 0, 0, rseed)\n",
+    "        r = self.Q(smpl.gen_trinary_string())\n",
+    "        msg, mlen = self.extract_msg(padded_msg)\n",
+    "        print(msg)\n",
+    "        if self.Q(self.p)*r*self.Q(self.chvpub) == t:\n",
+    "            result = msg[:mlen]\n",
     "        else:\n",
     "            result = \"Error\"\n",
-    "        return result"
+    "        return result\n",
+    "    \n",
+    "    def rnd_modq(self, l):\n",
+    "        '''Round f mod q\n",
+    "        '''\n",
+    "        qq = (self.q-1)//2\n",
+    "        ll = map(lift,l.list())\n",
+    "        return [n if n <= qq else n - self.q  for n in ll]\n",
+    "\n",
+    "    def rnd_modp(self, l):\n",
+    "        '''Round l mod p\n",
+    "        '''\n",
+    "        pp = (self.p-1)//2\n",
+    "        rr = lambda x: x if x <= pp else x - self.p\n",
+    "        return [rr(n%self.p) if n>=0 else -rr((-n)%self.p) for n in l]\n",
+    "\n",
+    "    def pad_msg(self, msg, seed):\n",
+    "        ''' Pad message according to NTRU spec\n",
+    "        '''\n",
+    "        mlen = len(msg)\n",
+    "        if mlen < (self.N-173):\n",
+    "            pass\n",
+    "        return msg\n",
+    "            \n",
+    "    def extract_msg(self, msg):\n",
+    "        ''' Reverse padded message\n",
+    "        '''\n",
+    "        return msg, len(msg)\n",
+    "    \n",
+    "    \n",
+    "class Sampler:\n",
+    "    ''' Generate random bit strings of fixed size based on imposed restrictions\n",
+    "    '''\n",
+    "    def __init__(self, N, d, e, seed):\n",
+    "        if seed!=None:\n",
+    "            set_random_seed(seed)\n",
+    "        else:\n",
+    "            set_random_seed() #seed automatically selected\n",
+    "        if d and e:\n",
+    "            self.pool = [-1]*e + [1]*d + [0]*(N-d-e)\n",
+    "            shuffle(self.pool)\n",
+    "        else:\n",
+    "            self.pool = [choice([-1,0,1]) for i in range(0,N)]\n",
+    "    \n",
+    "    def gen_trinary_string(self):\n",
+    "        shuffle(self.pool)\n",
+    "        return self.pool\n",
+    "    \n",
+    "def gen_bstring(n):\n",
+    "    '''Generate a random bit string\n",
+    "    '''\n",
+    "    return [choice([-1,0,1]) for k in range(n)]  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 117,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand parent(s) for -: '<type 'function'>' and 'Integer Ring'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-838bf5aea6e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mK\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNTRU\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgen_bstring\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mm\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-22-a010b3a87342>\u001b[0m in \u001b[0;36mencrypt\u001b[0;34m(self, msg)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mencrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m         \u001b[0mpadded_msg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpad_msg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m         \u001b[0mrseed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msha256\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpadded_msg\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchvpub\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0msmpl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSampler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-21-1849c3b70dda>\u001b[0m in \u001b[0;36mpad_msg\u001b[0;34m(msg, seed)\u001b[0m\n\u001b[1;32m     32\u001b[0m     '''\n\u001b[1;32m     33\u001b[0m     \u001b[0mmlen\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mmlen\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m173\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m         \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Applications/SageMath-8.7.app/Contents/Resources/sage/local/lib/python2.7/site-packages/sage/rings/integer.pyx\u001b[0m in \u001b[0;36msage.rings.integer.Integer.__sub__ (build/cythonized/sage/rings/integer.c:11928)\u001b[0;34m()\u001b[0m\n\u001b[1;32m   1772\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1773\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1774\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mcoercion_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbin_op\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moperator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1775\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1776\u001b[0m     \u001b[0mcpdef\u001b[0m \u001b[0m_sub_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Applications/SageMath-8.7.app/Contents/Resources/sage/local/lib/python2.7/site-packages/sage/structure/coerce.pyx\u001b[0m in \u001b[0;36msage.structure.coerce.CoercionModel.bin_op (build/cythonized/sage/structure/coerce.c:11111)\u001b[0;34m()\u001b[0m\n\u001b[1;32m   1208\u001b[0m         \u001b[0;31m# We should really include the underlying error.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1209\u001b[0m         \u001b[0;31m# This causes so much headache.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1210\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mbin_op_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mop\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1211\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1212\u001b[0m     \u001b[0mcpdef\u001b[0m \u001b[0mcanonical_coercion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand parent(s) for -: '<type 'function'>' and 'Integer Ring'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, -1, 0, -1, -1]\n",
+      "[0, 0, -1, 0, -1, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "K = NTRU(6)\n",
     "m = gen_bstring(6)\n",
+    "print(m)\n",
     "e = K.encrypt(m)\n",
     "m == K.decrypt(e)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
