--- a/TP3/NTRU_Encrypt.ipynb
+++ b/TP3/NTRU_Encrypt.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,8 +95,7 @@
     "    def keygen(self):\n",
     "        smpl = Sampler(self.N, self.d, self.d+1, None)\n",
     "        seq = smpl.gen_trinary_string()\n",
-    "        F = self.Q(smpl.gen_trinary_string())\n",
-    "        \n",
+    "        F = self.Q(smpl.gen_trinary_string())       \n",
     "        f = 1 + self.p*F\n",
     "        while not f.is_unit():\n",
     "            F = self.Q(smpl.gen_trinary_string())\n",
@@ -108,7 +107,7 @@
     "        self.chvpub = h\n",
     "        \n",
     "    def encrypt(self, msg):\n",
-    "        padded_msg = self.pad_msg(msg, 2)\n",
+    "        padded_msg = self.pad_msg(msg, None)\n",
     "        m_h = bytes(padded_msg + self.chvpub)\n",
     "        rseed = int(sha512(m_h).hexdigest(), 16)\n",
     "        smpl = Sampler(self.N, 0, 0, rseed)\n",
@@ -133,7 +132,6 @@
     "        smpl = Sampler(self.N, 0, 0, rseed)\n",
     "        r = self.Q(smpl.gen_trinary_string())\n",
     "        msg, mlen = self.extract_msg(padded_msg)\n",
-    "        print(msg)\n",
     "        if self.Q(self.p)*r*self.Q(self.chvpub) == t:\n",
     "            result = msg[:mlen]\n",
     "        else:\n",
@@ -158,14 +156,28 @@
     "        ''' Pad message according to NTRU spec\n",
     "        '''\n",
     "        mlen = len(msg)\n",
-    "        if mlen < (self.N-173):\n",
-    "            pass\n",
-    "        return msg\n",
+    "        if mlen < (self.N - 173):\n",
+    "            fill_len = self.N-173-mlen+1\n",
+    "            if seed:\n",
+    "                set_random_seed(seed)\n",
+    "            else:\n",
+    "                set_random_seed()\n",
+    "            rand_pad = [choice([-1, 0, 1]) for i in range(167)]\n",
+    "            padded_msg = msg\n",
+    "            padded_msg.extend([0] * fill_len)\n",
+    "            padded_msg.extend(rand_pad)\n",
+    "            for i in range(5):\n",
+    "                padded_msg.append(mlen%2)\n",
+    "                mlen >>= 1\n",
+    "        return padded_msg\n",
     "            \n",
-    "    def extract_msg(self, msg):\n",
+    "    def extract_msg(self, padded_msg):\n",
     "        ''' Reverse padded message\n",
     "        '''\n",
-    "        return msg, len(msg)\n",
+    "        msg_len = 0\n",
+    "        for i in range(1,6):\n",
+    "            msg_len = msg_len*2+padded_msg[-i]\n",
+    "        return padded_msg, msg_len\n",
     "    \n",
     "    \n",
     "class Sampler:\n",
@@ -194,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 232,
    "metadata": {
     "scrolled": false
    },
@@ -203,27 +215,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, -1, 0, -1, -1]\n",
-      "[0, 0, -1, 0, -1, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+      "Error\n",
+      "False\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "K = NTRU(6)\n",
-    "m = gen_bstring(6)\n",
-    "print(m)\n",
+    "K = NTRU(10)\n",
+    "m = gen_bstring(10)\n",
     "e = K.encrypt(m)\n",
-    "m == K.decrypt(e)"
+    "d = K.decrypt(e)\n",
+    "print(d)\n",
+    "print(d==e)"
    ]
   }
  ],
