NTRU-KEM implementation

--- a/TP3/NTRU_Encrypt.ipynb
+++ b/TP3/NTRU_Encrypt.ipynb
@@ -75,11 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hashlib import sha512\n",
+    "from hashlib import sha512, pbkdf2_hmac\n",
+    "\n",
+    "CRYPTO_BYTES = 32\n",
     "\n",
     "class NTRU(object):\n",
     "    def __init__(self, d):\n",
@@ -106,8 +108,20 @@
     "        self.chvpriv = (f,g)\n",
     "        self.chvpub = h\n",
     "        \n",
-    "    def encrypt(self, msg):\n",
-    "        padded_msg = self.pad_msg(msg, None)\n",
+    "    def kem_encap(self, seed):\n",
+    "        encaped_sec = [choice([0,1]) for i in range(8*32)]\n",
+    "        c = self.encrypt(encaped_sec, seed)\n",
+    "        shared_sec = pbkdf2_hmac('sha512', bytes(encaped_sec), bytes(self.chvpub), 100000)\n",
+    "        return c, shared_sec\n",
+    "    \n",
+    "    def kem_decap(self, c):\n",
+    "        encaped_sec = self.decrypt(c)\n",
+    "        shared_sec = pbkdf2_hmac('sha512', bytes(encaped_sec), bytes(self.chvpub), 100000)\n",
+    "        return shared_sec\n",
+    "        \n",
+    "        \n",
+    "    def encrypt(self, msg, seed):\n",
+    "        padded_msg = self.pad_msg(msg, seed)\n",
     "        m_h = bytes(padded_msg + self.chvpub)\n",
     "        rseed = int(sha512(m_h).hexdigest(), 16)\n",
     "        smpl = Sampler(self.N, 0, 0, rseed)\n",
@@ -132,6 +146,7 @@
     "        smpl = Sampler(self.N, 0, 0, rseed)\n",
     "        r = self.Q(smpl.gen_trinary_string())\n",
     "        msg, mlen = self.extract_msg(padded_msg)\n",
+    "        print(msg)\n",
     "        if self.Q(self.p)*r*self.Q(self.chvpub) == t:\n",
     "            result = msg[:mlen]\n",
     "        else:\n",
@@ -156,6 +171,7 @@
     "        ''' Pad message according to NTRU spec\n",
     "        '''\n",
     "        mlen = len(msg)\n",
+    "        print(mlen)\n",
     "        if mlen < (self.N - 173):\n",
     "            fill_len = self.N-173-mlen+1\n",
     "            if seed:\n",
@@ -206,28 +222,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error\n",
-      "False\n"
+     "ename": "TypeError",
+     "evalue": "urandom() takes exactly 1 argument (0 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-19d0f0afcaa1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mK\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNTRU\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgen_bstring\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mseed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0murandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: urandom() takes exactly 1 argument (0 given)"
      ]
     }
    ],
    "source": [
     "K = NTRU(10)\n",
     "m = gen_bstring(10)\n",
-    "e = K.encrypt(m)\n",
+    "seed = os.urandom()\n",
+    "e = K.encrypt(m, seed)\n",
     "d = K.decrypt(e)\n",
     "print(d)\n",
     "print(d==e)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256\n",
+      "[1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, -1, 0, -1, 1, 1, 1, -1, 1, 0, 0, 1, -1, -1, 1, -1, 0, 1, -1, 1, 0, -1, 1, 1, 0, 0, 0, 0, 1, -1, 1, -1, 0, -1, 1, -1, -1, -1, -1, 1, 0, -1, 1, 1, -1, 1, 0, -1, -1, 0, 1, -1, 0, 0, -1, 1, -1, 0, 1, 0, -1, -1, 1, 1, 1, -1, 0, -1, -1, -1, 0, -1, 0, -1, 0, 1, 0, 0, -1, 0, -1, -1, 1, 1, 1, -1, 1, 0, 0, 1, 0, 1, -1, 0, -1, 0, -1, 0, 1, -1, 0, -1, -1, 1, 1, -1, 0, -1, 0, 1, -1, 1, 0, 0, 1, 1, -1, 1, 0, -1, 0, 0, -1, -1, -1, -1, -1, 1, 1, 1, -1, 0, 0, -1, -1, -1, 1, -1, 0, 0, -1, 0, 0, -1, -1, 0, -1, 1, 0, 0, -1, -1, -1, 1, 0, -1, 0, -1, 0, 0, 0, 1, -1, 0, -1, -1, 0, 0, 0, 0, 0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\xb1\\x1ae\\xc4\\xaf\\xeaita+WS\\xd5MA\\xe4\\xd2\\xdf\\xc3\\x90\\xa4\\xc4TC\\xe6\\xcbq\\x83L'2|\\xceZB\\x90\\xeb\\xd4\\x0b\\x98\\x93\\xc4cd\\x86\\xb5\\x89\\xec\\xef\\xba\\xe4\\xbc\\xd1=]\\xba\\x81\\x80I/\\x93\\xc9\\xe3k\""
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "K = NTRU(10)\n",
+    "seed = ZZ.random_element()\n",
+    "c, ss = K.kem_encap(seed)\n",
+    "K.kem_decap(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
